Added code to support the new, tile-based TOPOS format.